tests/expectations/parser-expression/expression/async_block_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_0:1:7
     |
   1 | async {
     |       ^
Error [EPAR0370005]: expected { -- found '<eof>'
    --> test_1:1:1
     |
   1 | async
     | ^^^^^
Error [EPAR0370005]: expected ; -- found '}'
    --> test_2:1:11
     |
   1 | async { 0 }
     |           ^
Error [EPAR0370005]: expected ; -- found 'y'
    --> test_3:1:11
     |
   1 | async { x y }
     |           ^
